--- a/_posts/2020-07-12-lavida.markdown
+++ b/_posts/2020-07-12-lavida.markdown
@@ -8,4 +8,56 @@ image: /assets/article_images/2014-11-30-mediator_features/night-track.JPG
 image2: /assets/article_images/2014-11-30-mediator_features/night-track-mobile.JPG
 ---
 #La vida
-la vida es una dona
+ La existencia tiene sentido, y siempre es posible ir a buscar cuál es ese sentido intrínseco en nuestro caso particular.
+
+Quizá dar una oportunidad a la lectura de El hombre en busca de sentido de Frankl es un buen inicio. No es el único, pero sí el que me ha venido a la mente al pensar en las cosas pequeñas que tanto importan.
+
+Recado cotidiano en tiempo de pandemia
+
+La destilación cotidiana de estas pequeñas cosas podría desarrollarse de la manera siguiente: varias semanas (¿cuántas?) después del inicio del primer confinamiento (habrá más hasta que se encuentre la vacuna) a causa de la pandemia causada por el coronavirus, me dispongo a hacer algo de pan.
+
+Observo que faltan ingredientes, entre ellos la harina que preferimos y levadura que permita iniciar una nueva masa madre. Como ha ocurrido últimamente, me acerco a las tiendas de proximidad y observo que será difícil encontrar levadura; la harina preferida también parece agotarse con rapidez, pero hay alternativas. Primera tienda, segunda, tercera y última tienda.
+
+Bien, hay un par de paquetes de la preparación de levadura que he dado mejor resultado. Pero, como ocurriría en las mejores tragicomedias, observo cómo otro urbanita en la misma tesitura gastro-existencial se aproxima a los estantes que denotan el inusitado boom de la panificación de confinamiento y se hace con los tres últimos paquetes del preparado.
+
+Quizá mi interés por el producto y súbita decepción iniciaran un modo perceptivo equiparable en el lenguaje tecno-audiovisual contemporáneo al efecto de cámara lenta del móvil, el mismo que despierta un estado de conciencia capaz de entrever los pequeños gestos de quienes nos rodean.
+
+El dios de las pequeñas cosas
+
+Todavía estoy a una cierta distancia de quien ha acaparado las últimas existencias —de la jornada, o quizá de la semana— del preparado con levadura natural que habría preferido.
+
+Observo, no obstante, que el sentido de compartir una situación en un momento histórico particular también aumenta nuestro sentido de la existencia compartida: al constatar que alguien se aproximaba al estante, la persona que había acaparado los productos más próximos al agotamiento ha optado al fin por acaparar más de una unidad de los que contaban con un número considerable de inventario en los estantes.
+
+Las pequeñas cosas también nos permiten reconciliarnos con momentos que, en situaciones corrientes, dejamos resbalar sin otorgarles el mínimo valor o importancia. De repente, ser conscientes de la fragilidad de quienes nos rodean es también una llamada que nos inspira para apreciar, compartir, crear.
+
+
+Viktor E. Frankl
+No es casual que muchos de los trabajos que nos vienen a la mente en cualquier disciplina imaginable parten de momentos difíciles o los consideran como motivo alegórico. Cuando lo fundamental está en riesgo, el apego por lo mundano da paso a una visión más lúcida sobre lo auténtico, lo esperanzador, lo bello, lo noble, lo justo, lo resistente, lo sustancioso.
+
+El bienestar duradero no elude los momentos agridulces, nos recuerdan los filósofos más lúcidos, cada uno desde su visión particular; algunos, con grandiosas «teorías de todo»; otros, modestos como una hormiga que intuye la inteligencia del hormiguero, pero se conforma con explicarnos hasta qué punto es la simple «intuición» la que propulsa su fuerza interior.
+
+Vitalismo
+
+El resto son detalles epistemológicos, sobre todo cuando la inestabilidad en la coyuntura (lo que Nietzsche llamó la «plaza pública») nos anima a acercarnos (virtualmente) a las redes sociales a mecernos al calor de las últimas ocurrencias de charlatanes que modulan el humor de la jornada como lo que son: meros termómetros de algoritmos, voceros de la superficialidad.
+
+Si, reconociendo su insignificancia, limitación espiritual y mortalidad, el estoico Marco Aurelio logró paradójicamente la inmortalidad, las voces más populares de cada momento parecen lograr lo contrario: el evolucionismo cultural (la «vitalidad» del contenido) hace que sus voces resuenen con un poderío ubicuo…
+
+Hasta que al instante siguiente surge otra ocurrencia digna de otra oportunidad para captar la atención con lo popular a insustancial, ese contenido que no pretende conducirnos al bienestar duradero y que, prometiéndonos entretenimiento, nos aleja de los resquicios de tranquilidad y grandeza que abren para nosotros el gesto no demandado de un desconocido, la melodía siempre fresca de una vieja canción apreciada, el pasaje de una obra literaria, serie o película, la atención recobrada a una obra de arte que nos agrada o intriga.
+
+Cuando Arundhati Roy dice que una pandemia actúa como un portal, se refiere a nuestra capacidad para aprovechar los momentos de transformación como situaciones en que la incertidumbre obliga a tomar partido y dar lo mejor (o lo peor) de nosotros.
+
+Discernir lo importante entre lo supletorio, comprender, redescubrir el significado de los pequeños gestos que pueden importar a alguien, a unos pocos, a muchos, aunque no mire ninguna cámara y no existan más contrapartidas que el efecto del propio gesto.
+
+Actitud y oportunidad
+
+En el siglo XX comprendimos que el sufrimiento puede alcanzar dimensiones industriales y servirse de burocracias técnicas que amplifican sus efectos.
+
+También pudimos descubrir que, en el propio epicentro de ese sufrimiento, algunos mantenían viva la llama del humanismo, con la simple herramienta de la propia conciencia y la capacidad para transmitirla.
+
+En el siglo XXI, cada uno a nuestra escala relativa, podremos poner a prueba con inquietante periodicidad nuestro comportamiento y conciencia, que podremos desperdiciar o alinear (según nuestras fuerzas o circunstancias).
+
+En ocasiones, puede que prevalezca en nosotros una «voluntad de sentido» capaz de inspirar en otros la pequeña aventura personal de encontrar su propia llama. Su «voluntad de sentido» personal e intransferible.
+
+Una última reflexión de Frankl en El hombre en busca de sentido:
+
+«Cada día, cada hora, ofrecía la oportunidad de tomar una decisión, una decisión que determinaba si te rendías o no a esos poderes que amenazaban con arrebatarte tu libertad interior»
